[workspace]

# this is for the new crate structure. The legacy code (current CML) still resides in the `rust` directory.
members = [
    "core",
    "crypto",
    "cip25/rust",
    "cip25/wasm",
    "cip25/wasm/json-gen",
    "cip36",
    "cip36-wasm",
    "wasm"
]

# exclude old crate structure to avoid error in it
exclude = [
    "rust",
    "rust/json-gen"
]
