[package]
name = "cip25-wasm-example"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cip25 = { path = "../cip25-wasm", package = "cardano-multiplatform-lib-cip25-wasm", features = ["wasm"] }
cardano-multiplatform-lib-core-wasm = { path = "../core-wasm" }

cbor_event = "2.2.0"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"

[features]
wasm = []