[package]
name = "cip25-lib-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../core", package = "cip25-lib" }
cbor_event = "2.2.0"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
