[package]
name = "cardano-multiplatform-lib-cip36-wasm"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../cip36", package = "cardano-multiplatform-lib-cip36" }
core_crypto = { path = "../crypto", package = "cardano-multiplatform-lib-crypto" }
wasm_crypto = { path = "../crypto-wasm", package = "cardano-multiplatform-lib-crypto-wasm" }
wasm_chain = { path = "../wasm", package = "cardano-multiplatform-lib-wasm" }
cbor_event = "2.2.0"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
