[package]
name = "cardano-multiplatform-lib-cip36"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cardano-multiplatform-lib-core = { "path" = "../core" }
cardano-multiplatform-lib-crypto = { "path" = "../crypto" }
cardano-multiplatform-lib-chain = { "path" = "../chain" }
cbor_event = "2.2.0"
linked-hash-map = "0.5.3"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
schemars = "0.8.8"
hex = "0.4.0"
thiserror = "1.0.37"