[package]
name = "cml-core-wasm"
version = "0.1.0"
edition = "2018"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-core = { path = "../core" }
cbor_event = "2.2.0"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"