[package]
name = "cardano-multiplatform-lib"
version = "3.1.3"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform SDK for core Cardano blockchain functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/doc"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme="../README.md"
exclude = [
    "pkg/*",
]
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cryptoxide = "0.4.4"
cbor_event = "2.4.0"
ed25519-bip32 = "0.4.1"
sha2 = "^0.10"
digest = "^0.10"
bech32 = "0.9.1"
hex = "0.4.0"
cfg-if = "1"
linked-hash-map = "0.5.6"
serde_json = "1.0.57"
num-bigint = "0.4.4"
num-integer = "0.1.45"
# The default can't be compiled to wasm, so it's necessary to use either the 'nightly'
# feature or this one
clear_on_drop = { version = "0.2", features = ["no_cc"] }
itertools = "0.12.0"
rand = "0.8.5"
schemars = "0.8.16"
serde = { version = "1.0", features = ["derive"] }
fraction = "0.14.0"
base64 = "0.21"
unicode-segmentation = "1.10.1"

# non-wasm
[target.'cfg(not(all(target_arch = "wasm32", not(target_os = "emscripten"))))'.dependencies]
rand_os = "0.1"
noop_proc_macro = "0.3.0"

# wasm
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
getrandom = { version = "0.2.10", features = ["js"], optional = true}
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
rand_os = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "=0.3.60"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
rand_chacha = "0.3.1"
flaky_test = "0.1.0"

[features]
wasm = ["getrandom"]
