[package]
name = "cml-wasm"
version = "0.1.0"
edition = "2018"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
core = { path = "../chain", package = "cml-chain" }
# TODO: remove this dependency if possible to reduce confusion? maybe pub export necessary things in crypto-wasm?
core_crypto = { path = "../crypto", package = "cml-crypto" }
wasm_crypto = { path = "../crypto-wasm", package = "cml-crypto-wasm" }
cbor_event = "2.2.0"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
