[package]
name = "cml-cip25"
version = "1.1.0"
edition = "2018"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-core = { "path" = "../../core/rust" }
cml-crypto = { "path" = "../../crypto/rust" }
cml-chain = { "path" = "../../chain/rust" }
cbor_event = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
schemars = "0.8.8"
hex = "0.4.0"