[package]
name = "cml-cip25"
version = "1.1.0"
edition = "2018"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-chain = { "path" = "../../chain/rust", version = "0.1.0" }
cml-core = { "path" = "../../core/rust", version = "0.1.0" }
cml-crypto = { "path" = "../../crypto/rust", version = "0.1.0" }
cbor_event = "2.2.0"
hex = "0.4.0"
schemars = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.37"
# for enums
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }