[package]
name = "cml-cip25"
version = "1.1.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform SDK for CIP25 Cardano NFT Metadata functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano", "cip25"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-chain = { "path" = "../../chain/rust", version = "0.1.0" }
cml-core = { "path" = "../../core/rust", version = "0.1.0" }
cml-crypto = { "path" = "../../crypto/rust", version = "0.1.0" }
cbor_event = "2.2.0"
hex = "0.4.0"
schemars = "0.8.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
thiserror = "1.0.37"
# for enums
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }