[package]
name = "cml-cip25-wasm"
version = "1.1.0"
edition = "2018"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cbor_event = "2.2.0"
cml-chain = { path = "../../chain/rust", version = "0.1.0" }
cml-chain-wasm = { path = "../../chain/wasm", version = "0.1.0" }
cml-core = { path = "../../core/rust", version = "0.1.0" }
cml-core-wasm = { path = "../../core/wasm", version = "0.1.0" }
cml-cip25 = { path = "../rust", version = "1.1.0" }
hex = "0.4.0"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }