[package]
name = "cml-cip36-wasm"
version = "0.1.0"
edition = "2018"
keywords = ["cardano", "cip36"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-cip36 = { path = "../rust", version = "0.1.0" }
cml-crypto = { path = "../../crypto/rust", version = "0.1.0" }
cml-crypto-wasm = { path = "../../crypto/wasm", version = "0.1.0" }
cml-chain-wasm = { path = "../../chain/wasm", version = "0.1.0" }
cml-core = { path = "../../core/rust", version = "0.1.0" }
cml-core-wasm = { path = "../../core/wasm", version = "0.1.0" }
cbor_event = "2.2.0"
hex = "0.4.0"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
