[package]
name = "cml-cip36-wasm"
version = "5.1.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform WASM SDK for CIP36 Catalyst voting functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano", "cip36"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-cip36 = { path = "../rust", version = "5.1.0" }
cml-crypto = { path = "../../crypto/rust", version = "5.1.0" }
cml-crypto-wasm = { path = "../../crypto/wasm", version = "5.1.0" }
cml-chain-wasm = { path = "../../chain/wasm", version = "5.1.0" }
cml-core = { path = "../../core/rust", version = "5.1.0" }
cml-core-wasm = { path = "../../core/wasm", version = "5.1.0" }
cbor_event = "2.2.0"
hex = "0.4.0"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
