[package]
name = "cardano-multiplatform-lib"
version = "4.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-chain-wasm = { path = "../../chain/wasm" }
cml-cip25-wasm = { path = "../../cip25/wasm" }
cml-cip36-wasm = { path = "../../cip36/wasm" }
cml-crypto-wasm = { path = "../../crypto/wasm" }
cml-core-wasm = { path = "../../core/wasm" }
cbor_event = "2.4.0"
hex = "0.4.0"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }