[package]
name = "cardano-multiplatform-lib"
version = "5.2.0"
edition = "2018"
keywords = ["cardano"]
license = "MIT"
description = "Multiplatform WASM SDK containing the most common CML crates for Cardano blockchain functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-chain-wasm = { path = "../../chain/wasm", version = "5.2.0" }
cml-cip25-wasm = { path = "../../cip25/wasm", version = "5.2.0" }
cml-cip36-wasm = { path = "../../cip36/wasm", version = "5.2.0" }
cml-crypto-wasm = { path = "../../crypto/wasm", version = "5.2.0" }
cml-core-wasm = { path = "../../core/wasm", version = "5.2.0" }
cbor_event = "2.4.0"
hex = "0.4.0"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }