[package]
name = "cml-crypto-wasm"
version = "4.0.2"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform WASM SDK for Cardano-related cryptographic functionality"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-crypto = { path = "../rust", version = "4.0.2" }
cbor_event = "2.2.0"
wasm-bindgen = { version = "=0.2.83", features = ["serde-serialize"] }
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
