[package]
name = "cml-multi-era"
version = "5.2.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform SDK for era-agnostic Cardano blockchain parsing"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-core = { path = "../../core/rust", version = "5.2.0" }
cml-crypto = { path = "../../crypto/rust", version = "5.2.0" }
cml-chain = { path = "../../chain/rust", version = "5.2.0" }
cbor_event = "2.4.0"
linked-hash-map = "0.5.3"
derivative = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
schemars = "0.8.8"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }

# only for declaring hash types
bech32 = "0.7.2"
hex = "0.4.0"