[package]
name = "cml-multi-era-wasm"
version = "5.2.0"
edition = "2018"
authors = ["dcSpark"]
license = "MIT"
description = "Multiplatform WASM SDK for era-agnostic Cardano blockchain parsing"
documentation = "https://github.com/dcSpark/cardano-multiplatform-lib/docs"
repository = "https://github.com/dcSpark/cardano-multiplatform-lib"
readme = "../../README.md"
keywords = ["cardano"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cml-chain = { path = "../../chain/rust", version = "5.2.0" }
cml-chain-wasm = { path = "../../chain/wasm", version = "5.2.0" }
cml-crypto = { path = "../../crypto/rust", version = "5.2.0" }
cml-crypto-wasm = { path = "../../crypto/wasm", version = "5.2.0" }
cml-core = { path = "../../core/rust", version = "5.2.0" }
cml-core-wasm = { path = "../../core/wasm", version = "5.2.0" }
cml-multi-era = { path = "../rust", version = "5.2.0" }
cbor_event = "2.4.0"
hex = "0.4.0"
linked-hash-map = "0.5.3"
serde_json = "1.0.57"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = { version = "0.2", features=["serde-serialize"] }
# not actual multi-era dependencies but we re-export these for the wasm builds
cml-cip25-wasm = { path = "../../cip25/wasm", version = "5.2.0" }
cml-cip36-wasm = { path = "../../cip36/wasm", version = "5.2.0" }