[package]
name = "cardano-multiplatform-lib-json-schema-gen"
version = "0.0.1"
edition = "2018"


[dependencies]
serde_json = "1.0.57"
schemars = "0.8.8"
cml-chain-json-schema-gen = { path = "../../../chain/wasm/json-gen" }
cml-cip25-json-schema-gen = { path = "../../../cip25/wasm/json-gen" }
cml-cip36-json-schema-gen = { path = "../../../cip36/wasm/json-gen" }
